# 2i-emulator

./: Alu.h  Cargo.toml  Cpu.cpp  LICENCE  Makefile  README.md  aliases.js  clean.bat  cleanupcsv  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yaml
2i_emulator/: all.html  index.html  sidebar-items.js  struct.Computer.html  struct.Program.html
doc/examples/: add2.txt  answer.2i  mul.txt  multiply.2i
doc/tools/: package  update-docs
emulator/: all.html  enum.Error.html  index.html  sidebar-items.js  type.Result.html
emulator/alu/: Alu.t.html  index.html  sidebar-items.js  struct.Alu.html  struct.Flags.html
emulator/bus/: Bus.t.html  IoRegisters.t.html  Ram.t.html  index.html  sidebar-items.js  struct.IoRegisters.html  struct.Ram.html  trait.Bus.html
emulator/cpu/: index.html  sidebar-items.js  struct.Cpu.html
emulator/instruction/: index.html  sidebar-items.js  struct.Instruction.html
emulator/parse/: fn.read_program.html  fn.read_reachable_program.html  index.html  read_program.v.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  (+1 more)
include/: Alu.h  Cpu.h  MiniUnit.hpp  SoC.h
src/: 2iEmulator.cpp  Alu.cpp  Cpu.cpp  SoC.cpp  main.rs
src/2i_emulator/: cli.rs.html  ipg.rs.html  latex.rs.html  main.rs.html  ui.rs.html
src/Tests/: AluTest.cpp
src/cli/: cli.rs  ipg.rs  latex.rs  latex.tex  main.rs  ui.rs
src/emulator/: alu.rs  alu.rs.html  bus.rs  bus.rs.html  cpu.rs  cpu.rs.html  instruction.rs  instruction.rs.html  lib.rs  lib.rs.html  mod.rs  parse.rs  parse.rs.html
(+14 files in other folders)
