[package]
name = "2i-emulator"
version = "1.1.0"
authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]

[lib]
name = "emulator"
path = "src/emulator/lib.rs"

[[bin]]
name = "2i-emulator"
path = "src/cli/main.rs"

[dependencies]
rustyline = { git = "https://github.com/klemens/rustyline.git", branch = "2i-emulator"}
cmdline-parser = "0.1"
regex = "0.2"
